update Calamus/Feather to gen2 and implement merging for pre-1.3